--- a/FitnessServices.web/Views/Account/Login.cshtml
+++ b/FitnessServices.web/Views/Account/Login.cshtml
@@ -9,71 +9,71 @@
 <html lang="en" class="h-100">
 
 <head>
-     <meta charset="utf-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width,initial-scale=1">
-     <title>Fito - Fitness Bootstrap Admin Dashboard</title>
-     <!-- Favicon icon -->
-     <link rel="icon" type="image/png" sizes="16x16" href="~/Content/images/favicon.png">
-     <link href="~/Content/css/style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Fito - Fitness Bootstrap Admin Dashboard</title>
+    <!-- Favicon icon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="~/Content/images/favicon.png">
+    @Styles.Render("~/bundles/style/css")
 
 </head>
 
 <body class="h-100">
-     <div class="authincation h-100">
-          <div class="container h-100">
-               <div class="row justify-content-center h-100 align-items-center">
-                    <div class="col-md-6">
-                         <div class="authincation-content">
-                              <div class="row no-gutters">
-                                   <div class="col-xl-12">
-                                        <div class="auth-form">
-                                             <h4 class="text-center mb-4">Sign in your account</h4>
-                                             <form action="#" method="post">
-                                                  <div class="form-group">
-                                                       <label class="mb-1"><strong>Email</strong></label>
-                                                       @Html.EditorFor(model => model.Email, new { htmlAttributes = new {@class = "form-control", @type = "email", @name = "email", @required = "" } })
-                                                  
-                                                       <label class="mb-1"><strong>Password</strong></label>
-                                                       @Html.EditorFor(model => model.Password, new { htmlAttributes = new {@class = "form-control", @type = "password", @name = "password", @required = "" } })
-                                                       @Html.ValidationSummary(false, "", new { @class = "text-danger" })
-                                                  </div>
-                                                  <div class="form-row d-flex justify-content-between mt-4 mb-2">
-                                                       <div class="form-group">
-                                                            <div class="custom-control custom-checkbox ml-1">
-                                                                 <input type="checkbox" class="custom-control-input" id="basic_checkbox_1">
-                                                                 <label class="custom-control-label" for="basic_checkbox_1">Remember my preference</label>
-                                                            </div>
-                                                       </div>
-                                                       <div class="form-group">
-                                                            <a href="page-forgot-password.html">Forgot Password?</a>
-                                                       </div>
-                                                  </div>
-                                                  <div class="text-center">
-                                                       <button type="submit" class="btn btn-primary btn-block">Sign Me In</button>
-                                                  </div>
-                                             </form>
-                                             <div class="new-account mt-3">
-                                                  <p>Don't have an account? <a class="text-primary" href="/Account/Signup">Sign up</a></p>
-                                             </div>
+    <div class="authincation h-100">
+        <div class="container h-100">
+            <div class="row justify-content-center h-100 align-items-center">
+                <div class="col-md-6">
+                    <div class="authincation-content">
+                        <div class="row no-gutters">
+                            <div class="col-xl-12">
+                                <div class="auth-form">
+                                    <h4 class="text-center mb-4">Sign in your account</h4>
+                                    <form action="#" method="post">
+                                        <div class="form-group">
+                                            <label class="mb-1"><strong>Email</strong></label>
+                                            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @type = "email", @name = "email", @required = "" } })
+
+                                            <label class="mb-1"><strong>Password</strong></label>
+                                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @type = "password", @name = "password", @required = "" } })
+                                            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
                                         </div>
-                                   </div>
-                              </div>
-                         </div>
+                                        <div class="form-row d-flex justify-content-between mt-4 mb-2">
+                                            <div class="form-group">
+                                                <div class="custom-control custom-checkbox ml-1">
+                                                    <input type="checkbox" class="custom-control-input" id="basic_checkbox_1">
+                                                    <label class="custom-control-label" for="basic_checkbox_1">Remember my preference</label>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <a href="page-forgot-password.html">Forgot Password?</a>
+                                            </div>
+                                        </div>
+                                        <div class="text-center">
+                                            <button type="submit" class="btn btn-primary btn-block">Sign Me In</button>
+                                        </div>
+                                    </form>
+                                    <div class="new-account mt-3">
+                                        <p>Don't have an account? <a class="text-primary" href="/Account/Signup">Sign up</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-               </div>
-          </div>
-     </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-     <!--**********************************
-         Scripts
-     ***********************************-->
-     <!-- Required vendors -->
-     <script src="~/Content/vendor/global/global.min.js"></script>
-     <script src="~/Content/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
-     <script src="~/Content/js/custom.min.js"></script>
-     <script src="~/Content/js/deznav-init.js"></script>
+    <!--**********************************
+        Scripts
+    ***********************************-->
+    <!-- Required vendors -->
+    @Scripts.Render("~/bundles/global.min/js")
+    @Scripts.Render("~/bundles/bootstrap-select.min/js")
+    @Scripts.Render("~/bundles/custom.min/js")
+    @Scripts.Render("~/bundles/deznav-init/js")
 
 </body>
 
