--- a/FitnessServices.web/Views/Home/Index.cshtml
+++ b/FitnessServices.web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@model dynamic
-
+﻿
+@using System.Web.Optimization
 @{
      Layout = null;
 }
@@ -15,7 +15,7 @@
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
     @Styles.Render("~/bundles/chartist.min/css")
-    @Styles.Render("~/bundles/bootstrap-select.min/css\")
+    @Styles.Render("~/bundles/bootstrap-select.min/css")
     @Styles.Render("~/bundles/style/css")
     @Styles.Render("~/bundles/LineIcons/css")
     @Styles.Render("~/bundles/owl.carousel/css")
