--- a/FitnessServices.web/Views/Account/Login.cshtml
+++ b/FitnessServices.web/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Web.Optimization
-@model FitnessServices.web.Models.UsersTable
+@model FitnessServices.Web.Models.UsersTable
 
 @{
      Layout = null;
